# modern_programming_platforms_lb2

./: .gitignore  README.md  docker-compose.yaml  migration.sql
frontend/: Dockerfile  nginx.conf  nginx.conf.template  (+2 more)
rust_backend/: .env  Cargo.toml  Dockerfile  sqlx-data.json
rust_backend/.sqlx/: query-05537af27c57c62ce2e24afba19880e03acac7c726a3391709be5d2f08546abd.json  query-0bffb903f25afaa94c4699cf3ad5f893864efa634092084c493fba549817ba2e.json  query-1ad5de1089bb452c946651058f8b2f9ab7d121b8af15214751e276bdfc9b7b6e.json  query-217a91cc6481b55ae0e2099500e6db211aceea1ea596ea1ac00a49d1a4ffab94.json  query-350ac61b530dac8c29995a6bb30e1150d47dce3e68b9c6028f43a788c2949ff5.json  query-512d43a29323b29f08e741f5915b184106c0b349f577804d1a199e3db0b3ccf6.json  query-5e9bb5449ee579454c75271a627deb7518124c67aeca8dfc2dc1fdd484d27d6d.json  query-67a024733a6801b2214191ada4a0aa30616aca0ada42eef0d6f1278b30364d53.json  query-74dcbf2a911ee69b0888664026622421d7ec5c2b68e86d42792019a805faf8b6.json  query-81080ab08510cd6bb1c37305d8c338717531f158b5da8e0a2620542df5cb260c.json  query-9e5ccd1557d871b81a0480b1f1ac1065ff508b8f08bfee3dbc0b73a850764d86.json  query-d7052edaf89d2769df98cc19ff4432860c267ce44bc732acc9f7aa3955b69e35.json  query-fe41f31aee5a590136e5034c3059b55e8c2726b0a42a570afb8ec4bbf45ac842.json
rust_backend/src/: main.rs
rust_backend/src/handlers/: auth.rs  posts.rs
rust_backend/src/services/auth/: entities.rs  mod.rs  password_hasher.rs  utils.rs
rust_backend/src/services/posts/: entities.rs  image_storage.rs  mod.rs
rust_backend/src/services/users/: entities.rs  mod.rs
(+18 files in other folders)
