[package]
name = "rust_backend"
version = "0.1.0"
edition = "2021"


[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-multipart-extract = "0.1.5"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-web = "4.2.1"
chrono = { version = "0.4.23", features = ["serde"] }
derive_more = "0.99.17"
dotenv = "0.15.0"
env_logger = "0.10.0"
ring = "0.16.20"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
sqlx = { version = "0.6.2", features = ["runtime-actix-native-tls", "postgres", "chrono", "offline"] }
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
