[package]
name = "rust_backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust_backend"
path = "src/main.rs"

[dependencies]
actix = "0.13.0"
actix-cors = "0.7.0"
actix-multipart-extract = "0.1.5"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-web = "4.2.1"
chrono = { version = "0.4.23", features = ["serde"] }
derive_more = "0.99.17"
dotenv = "0.15.0"
env_logger = "0.11.2"
ring = "0.17.8"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
sqlx = { version = "0.7.3", features = ["runtime-async-std", "postgres", "chrono", "macros"] }
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
